--- a/README.rdoc
+++ b/README.rdoc
@@ -2,22 +2,28 @@
 
 Codetribute connects passionate individuals seeking to do better in what they love. It provides free services to help small businesses expand their online presence by connecting web developers with determined proprietors. By minimizing the space between business owners and skilled developers, Codetribute is making more of the Internet accessible -- for less.
 
-Team
+## Features
+* Google Maps API
+* Reviews
+* Matching users
+* Live chat
+
+## Team
 * Kristie Chow
 * Jenna Espezua
 * Kerry Choy
 
-Built With:
-* Ruby on Rails for the backend framework 
-* Animsition and Sticky jQuery plugins with CSS3 for a custom, responsive web design
-* Ransack for search bar functionality 
-* Paperclip for uploading images
-* Gmaps4rails for showing a business location
-* Private Pub for instant messaging
+## Technologies
+* [Ruby on Rails](http://rubyrails.org/) for the backend framework 
+* [Animsition](http://git.blivesta.com/animsition/) and [Sticky](http://stickyjs.com/) jQuery plugins with CSS3 for a custom, responsive web design
+* [Ransack](https://github.com/activerecord-hackery/ransack) for search bar functionality 
+* [Paperclip](https://github.com/thoughtbot/paperclip) for uploading images
+* [Amazon S3](https://aws.amazon.com/s3/) for image hosting
+* [Gmaps4rails](https://github.com/apneadiving/Google-Maps-for-Rails) for showing a business location
 * Test Driven Development using Rspec
-* OmniAuth for OAuth integration
-* Private Pub for instant messaging
-* Test Driven Development using Rspec
+* OmniAuth for [Auth0](http://auth0.com/) integration
+* [Private Pub](https://github.com/ryanb/private_pub) for instant messaging
 * CircleCI and SimpleCov for continuous integration and coverage analysis
+* [Heroku](https://www.heroku.com/) for continuous deployment
 * GitHub for version control
-* Heroku for continuous deployment
+
